Fix repeat-detail-list overflow #6683

--- a/frontend/src/app/formly/types/repeat-detail-list/repeat-detail-list.component.scss
+++ b/frontend/src/app/formly/types/repeat-detail-list/repeat-detail-list.component.scss
@@ -28,13 +28,9 @@ ige-add-button {
   .explanation {
     white-space: normal;
     overflow: hidden;
+    overflow-wrap: anywhere;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-  }
-
-  .title,
-  .url {
-    overflow-wrap: anywhere;
   }
 
   .url {
